<resources>
    <string name="app_name">WSA Patch</string>
    <string name="xposed_description">解决 WSA 输入法偏移、无法输入，使悬浮窗能够拖拽（效果较差）</string>
    <string name="title_fix_ime_position">修复输入法位置偏移</string>
    <string name="summary_fix_ime_position">修复输入法弹出位置随窗口位置偏移</string>
    <string name="title_ime_offset_y">纵坐标偏移量</string>
    <string name="summary_ime_offset_y">这通常是 Windows 窗口标题栏的高度</string>
    <string name="title_ime_replace_invalid_check">替换 isInvalidEditControl 方法</string>
    <string name="summary_off_ime_replace_invalid_check">可解决“MT管理器”等部分应用无法输入的问题</string>
    <string name="summary_on_ime_replace_invalid_check">initialSelStart 和 initialSelEnd 为 -1 时仍将认为有效</string>
    <string name="title_ime_request_cursor_updates_fallback">请求光标位置失败则使用 View 左下角</string>
    <string name="summary_ime_request_cursor_updates_fallback">调用 requestCursorUpdates 失败时，从 View 左下角弹出输入法，如：MT管理器，但效果并不好</string>
    <string name="header_ime">输入法相关</string>
    <string name="header_others">其他</string>
    <string name="title_content_description_as_tooltip">将内容描述作为鼠标悬停提示</string>
    <string name="summary_content_description_as_tooltip">setContentDescription 时，若 TooltipText 未设置，则同时 setTooltipText</string>
    <string name="title_fix_overlay_window_drag">解决悬浮窗无法拖拽的问题</string>
    <string name="summary_fix_overlay_window_drag">让悬浮窗能够拖拽，但每次停止拖拽后，需要重新添加悬浮窗</string>
    <string name="header_overlay_window">悬浮窗</string>
    <string name="integer_edittext_preference_error_message" formatted="false">请输入 %d 到 %d 之间的整数</string>
    <string name="illegal_data">数据不合法</string>
    <string name="description_app_icon">应用图标</string>
    <string name="system_app">系统应用</string>
    <string name="add_item">添加项目</string>
    <string name="item_already_exists">项目已存在</string>
    <string name="edit_item">编辑项目</string>
    <string name="delete">删除</string>
    <string name="preference_error_title">获取首选项失败</string>
    <string name="preference_error_message">请前往 LSPosed 检查模块是否启用</string>
    <string name="summary_overlay_window_scope">设置需要修复悬浮窗拖拽问题的应用</string>
    <string name="title_overlay_window_scope">悬浮窗补丁作用域</string>
    <string name="header_redirection">重定向</string>
    <string name="title_block_setting_redirect">阻止设置界面重定向</string>
    <string name="summary_block_setting_redirect">阻止跳转设置界面重定向到 Windows 设置</string>
    <string name="title_block_setting_redirect_actions">需要阻止重定向的 action</string>
    <string name="summary_block_setting_redirect_actions">设置需要阻止重定向的 action，如无障碍设置界面</string>
    <string name="title_content_description_as_tooltip_scope">鼠标悬停提示作用域</string>
    <string name="summary_content_description_as_tooltip_scope">设置需要将内容描述作为鼠标悬停提示的应用</string>
    <string name="application_select_notice">实际的作用域为所选应用与 LSPosed 中本模块的作用域的交集。若不选择，将对 LSPosed 中本模块的作用域中的所有应用起效</string>
</resources>